# Snake

./: CMakeLists.txt  Readme.md
cmake/: resources.cmake
res/: CMakeLists.txt  Resource.h  res_lib.cpp
src/: CMakeLists.txt  Game.hpp  main.cpp
